# EXPRESANGIL

./: .gitignore  ABRIR_EDITOR.bat  CLAUDE.md  INICIAR_GESTOR.bat  PANEL.bat  README.md  presentacion.html  pyproject.toml
config/: credentials.example.json  settings.example.toml  settings.toml
data/database/: guias.db
data/output/: 13 junio.xlsx
la-esperanza-app/: .env.example  MASTER_PLAN.md  README.md  package-lock.json  package.json
la-esperanza-app/src/app/: layout.tsx  page.tsx
la-esperanza-app/src/app/(dashboard)/: layout.tsx
la-esperanza-app/src/types/: database.ts
la-esperanza-app/supabase/migrations/: 0001_init.sql  0002_calificaciones.sql
launcher/: app.js  consulta.css  consulta.html  consulta.js  dashboard.css  dashboard.html  dashboard.js  entregas-mes.css  entregas-mes.html  entregas-mes.js  index.html  operadores.css  operadores.html  operadores.js  style.css  usuarios.css  usuarios.html  usuarios.js  zona-trabajo.css  zona-trabajo.html  zona-trabajo.js  zona.css  zona.html  zona.js
scripts/: build_installer.ps1  gestor-guias.nginx.conf  gestor-guias.service
src/gestor_guias/: __init__.py  app.py  config.py  consulta_publica.py  devoluciones.py  editor_gui.py  excel_processor.py  exporter.py  gmail_client.py  launcher_server.py  operadores.py  recaudo.py  relacion_ce_rr.py  reports.py  repository.py
src/gestor_guias_envia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_consulta_publica.py  test_excel_processor.py  test_exporter.py  test_operadores.py  test_reports.py  test_repository.py
(+34 files in other folders)
