[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gestor-guias-envia"
version = "0.1.0"
description = "Descarga y consolidacion diaria de guias desde Gmail"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.130.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
